--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel",
-    "build": "parcel build"
+    "build": "parcel build --dist-dir build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
