--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel",
-    "build": "parcel build --dist-dir build",
+    "build": "parcel build --dist-dir build --public-url /dwf-m5-note-app",
     "deploy": "gh-pages -d build"
   },
   "keywords": [],
